# Pose-Extraction

./: .gitignore  RESULTS.md  emotion_classifier.py  feature_extractor.py  main.py  pose_extractor.py  pyproject.toml  visualizer.py
