[project]
name = "pose-detection"
version = "0.1.0"
description = "Subtle movement extraction for seated subjects listening to music (OpenPose via YOLO-Pose)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.0",
    "opencv-contrib-python>=4.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pillow>=10.0",
]
